<resources>
    <string name="app_name">Happy pizza</string>

    <string name="txt_please_for_exit_reenter_back">برای خروج دوباره کلید بازگشت را بزنید</string>

    <string name="name_family">نام و نام خانوادگی</string>
    <string name="orders">سفارش ها</string>
    <string name="not_ready">آماده نشده</string>
    <string name="description">توضیحات :</string>
    <string name="finish_get_ready">اتمام آماده سازی</string>
    <string name="address">آدرس :</string>
    <string name="ready">آماده شده</string>
    <string name="order_history">کل سفارشات</string>
    <string name="verification_code">کد تایید</string>
    <string name="send_code">ارسال کد</string>
    <string name="password">رمز عبور</string>
    <string name="register_before">قبلا ثبت نام کردم</string>
    <string name="login">ورود</string>
    <string name="register_time">زمان ثبت:</string>
    <string name="signUp">ثبت نام</string>
    <string name="mobile">موبایل</string>
    <string name="mobile_dot">موبایل :</string>
    <string name="customer_name">نام مشتری :</string>
    <string name="email">ایمیل</string>
    <string name="total">جمع کل :</string>
    <string name="order">سفارش</string>
    <string name="price">قیمت</string>
    <string name="number">تعداد</string>
    <string name="size">سایز</string>
    <string name="toman">تومان</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kitchen_version">نسخه آشپزخانه</string>
    <string name="deliver_name">نام پیک :</string>
    <string name="location_delivery">موقعیت پیک</string>
    <string name="de_active">غیرفعال</string>
    <string name="active">فعال</string>

</resources>