<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:background="@drawable/field_background"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp" />

        <ImageView
            android:id="@+id/imgCall"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/bg_green"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_call_answer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_7sdp" />

        <ImageView
            android:id="@+id/imgCallDriver"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/red"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_call_answer" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llHeaderStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_orders_header"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_9sdp"
            android:paddingVertical="@dimen/_7sdp">

            <ImageView
                android:id="@+id/imgStatus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="0.25" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="left|center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_7sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/customer_name"
                android:textColor="@color/color_Titles"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:id="@+id/txtCustomerName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDeliverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_7sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center_vertical"
                android:text="@string/deliver_name"
                android:textColor="@color/color_Titles"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:id="@+id/txtDeliverName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical|right"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingBottom="@dimen/_7sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/address"
                android:layout_gravity="top|right"
                android:textColor="@color/color_Titles"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/pale_red"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.79"
                    android:gravity="center_vertical"
                    android:paddingRight="@dimen/_12sdp"
                    android:text="@string/order"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:gravity="center"
                    android:text="@string/size"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_16sdp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:paddingRight="@dimen/_9sdp"
                    android:text="@string/number"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/orderList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:listSelector="#00ffffff"
                android:paddingBottom="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_product" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_4sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/total"
                android:textColor="@color/color_Titles"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTotalPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/description"
                android:textColor="@color/color_Titles"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp" />

        </LinearLayout>

        <ViewFlipper
            android:id="@+id/vfSetReady"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="4"
            android:background="@drawable/red"
            android:elevation="@dimen/_2sdp">

            <Button
                android:id="@+id/btnPacked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_gray"
                android:text="بسته بندی نشده"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />

            <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:indicatorColor="@color/white" />

        </ViewFlipper>

    </LinearLayout>

</RelativeLayout>