<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="true"
    android:gravity="top"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/actionbar">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:text="@string/not_ready"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ViewFlipper
        android:id="@+id/vfOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.wang.avi.AVLoadingIndicatorView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:indicatorColor="@color/white"
            app:indicatorName="BallBeatIndicator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_17sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_weight="0.25"
                android:background="@drawable/pale_red"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp">

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/register_time"
                    android:textColor="@color/color_Titles"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="right|center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:background="@drawable/field_background"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productList"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:divider="@null"
                    android:listSelector="#00ffffff"
                    android:padding="@dimen/_5sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_product" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/description"
                        android:textColor="@color/color_Titles"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingRight="10dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:src="@drawable/ic_call" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_5sdp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.19"
                    android:text="@string/address"
                    android:textColor="@color/color_Titles"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>

            <ViewFlipper
                android:id="@+id/vfSetReady"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="0.3"
                android:background="@drawable/red"
                android:elevation="@dimen/_2sdp">

                <Button
                    android:id="@+id/btnOrderReady"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/red"
                    android:text="@string/get_ready"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    app:indicatorColor="@color/white" />

            </ViewFlipper>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="سفارش آماده نشده ای وجود ندارد."
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="خطایی پیش آمده دوباره امتحان کنید."
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/imgRefresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:src="@drawable/ic_refresh" />

        </LinearLayout>

    </ViewFlipper>

</LinearLayout>